[workspace]
resolver = "2"
members = [
  # Packages
  # "packages/headstash_library",
  # "packages/contract_derive",

  # Secret Headstash Contract
  "contract/airdrop",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
