[workspace]
members = [
  # Secret Headstash Contract
  "contracts/cw-glob",
  "contracts/cw-ica-controller",
  "contracts/cw-ica-owner",
  # "scripts",
]
exclude = ["scripts"]

# [workspace.package]
# edition = "2021"
# license = "BSD-3-Clause"
# repository = "https://https://github.com/permissionlessweb/cw-headstash/public-crates"
# rust-version = "1.67"
# version = "1.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
