[workspace]
members = [
  "contracts/polytone/note",
  "contracts/polytone/proxy",
  "contracts/polytone/voice",
  "packages/cw-orch-polytone",
  "packages/polytone",
]
exclude = [  "contracts/polytone"]

[workspace.package]
edition = "2021"
rust-version = "1.67"
license = "BSD-3-Clause"
repository = "https://https://github.com/permissionlessweb/cw-headstash/public-crates"
version = "1.0.0"

[workspace.dependencies]
polytone-proxy = { path = "contracts/polytone/proxy" }
polytone-voice = { path = "contracts/polytone/voice"}
polytone-note = { path = "contracts/polytone/note"}
polytone = { path = "packages/polytone" }


cosmos-sdk-proto = { version = "0.23", default-features = false, features = ["cosmwasm", "std"] }
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_1_4", "stargate"] }
cosmwasm-schema = "2.2.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw-orch = { version = "0.28.0" }
cw-orch-interchain = { version = "0.9.0", features = ["daemon"] }
cw2 = "2.0"
cw-multi-test = "2.1.1"

anyhow = { version = "1.0.51" }
anybuf = "0.5.0"
thiserror = { version = "2.0.12" }
sha2 = "0.10.8"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
