[package]
name = "headstash-scripts"
version = "0.1.0"
authors = ["TerpNETFoundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]


[dependencies]
tokio = "1.40.0"
serde_json = "1.0.128"
anybuf =  "0.5.0"
anyhow =  "1.0.87"
cw-headstash = {path = "../contracts/headstash"}
reqwest = "0.12.7"
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.22"
# snip120u-impl = { version = "1.0.0", path = "../contract/snip120u"}
# cosmos specific deps
cw-ica-controller = { git = "https://github.com/permissionlessweb/cw-ica-controller" , default-features = false }
cw-orch-interchain = {version = "0.4.0", features = ["daemon"]}
cw-orch = {version = "0.25.0", features = ["daemon"]}
cosmrs = {version = "0.19.0", features = ["cosmwasm"]}
cosmwasm-std = { version = "2.1.3", default-features = false,features = [
  "stargate",
] }
secret-cosmwasm-std = { version = "1.1.11", default-features = false,features = [
  "stargate",
] }
cosmwasm-schema = "1.1.8"

[[bin]]
name = "deploy-cw-ica"
path = "src/bin/1_create_ica_account_on_secret.rs"
[[bin]]
name = "grant-authz-as-ica"
path = "src/bin/2_authz_secret_ica_w_uploads.rs"
[[bin]]
name = "upload-headstash-infra"
path = "src/bin/3_a_upload_headstash_infra.rs"
[[bin]]
name = "create-snip120u"
path = "src/bin/3_b_init_snip120u.rs"
[[bin]]
name = "create-headstash"
path = "src/bin/3_c_init_headstash.rs"
[[bin]]
name = "authorize-headstash-as-minter"
path = "src/bin/3_d_authorize_minters.rs"
[[bin]]
name = "add-eligible-addrs"
path = "src/bin/3_d_authorize_minters.rs"