[package]
name = "headstash-scripts"
version = "0.1.0"
authors = ["TerpNETFoundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]


[dependencies]
cw-orch = {version = "0.28.0", features = ["daemon"]}
cw-orch-interchain = {version = "0.9.0", features = ["daemon"]}
cw-orch-polytone = {path = "../public-crates/packages/cw-orch-polytone"}

polytone = {path = "../public-crates/packages/polytone"}
polytone-note  = {path = "../public-crates/contracts/polytone/note", features=["interface"] }
polytone-proxy = {path = "../public-crates/contracts/polytone/proxy", features=["interface"] }
polytone-voice = {path = "../public-crates/contracts/polytone/voice", features=["interface"] }
cw-glob = {path = "../public-crates/contracts/cw-glob", features=["library"] }

cw-headstash = {path = "../secret-crates/contracts/headstash"}
headstash-public = {path = "../public-crates/packages/headstash-public"}

# cw-ica-controller = { git = "https://github.com/permissionlessweb/cw-ica-controller" , default-features = false }

secret-cosmwasm-std = { version = "1.1.11", default-features = false,features = ["stargate"] }
cosmwasm-std = { version = "2.2.2", default-features = false,features = [
  "stargate",
] }
cosmrs = {version = "0.19.0", features = ["cosmwasm"]}
cosmwasm-schema = "2.2.2"


tokio = "1.40.0"
dotenv = "0.15.0"
protobuf = "3.1.0"
serde_json = "1.0.128"
anybuf =  "0.5.0"
anyhow =  "1.0.87"
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.22"
