[workspace]
resolver = "2"
members = ["contracts/polytone/*"]


[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://https://github.com/permissionlessweb/cw-headstash/secret-crates"
rust-version = "1.67"
version = "2.0.0"

[workspace.dependencies]
polytone = { path = "packages/secret-polytone" }
polytone-proxy = { path = "contracts/polytone/proxy"  }
polytone-voice = { path = "contracts/polytone/voice" }

cosmwasm-schema = { version = "1.1.8" }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"  }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11"  }

# cw-utils = "1.0.1"
# cw2 = "=1.1.2"

thiserror = "1.0.31"
sha2 = { version = "0.10.2", default-features = false }
anyhow = { version = "1.0.51" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true