[package]
name = "secret_headstash"
version = "0.1.0"
authors = ["TerpNETFoundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
  "stargate",
  "staking",
  "ibc3",
  "random",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
sha2            = { version = "0.10.2", default-features = false }
sha3 = "0.10"
hex = "0.4"
secret-toolkit = { version = "0.10.0", default-features = false, features = [
  "utils",
  "serialization",
  "viewing-key",
  "permit",
  "storage",
  "snip20",
  "snip721",
] }

# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
