[package]
name = "secret_headstash"
version = "0.1.0"
authors = ["TerpNETFoundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anybuf = { version = "0.5.0" }
# snip20-reference-impl = { git = "https://github.com/scrtlabs/snip20-reference-impl", rev = "6bd9ed593ccace18125bd1b84d093dfdc4599cc1" }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", default-features = false,features = [
  "stargate",
  "staking",
  "ibc3",
  "random",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
sha2            = { version = "0.10.2", default-features = false }
sha3 = "0.10"
hex = "0.4"
secret-toolkit = { version = "0.10.0", default-features = false, features = [
  "utils",
  "serialization",
  "viewing-key",
  "permit",
  "storage",
  "snip20",
  "snip721",
] }
# Uncomment these for some common extra tools

# [patch.crates-io]
# uncomment this if you use cw-storage-plus

[[bin]]
name = "schema"
required-features = ["schema"]
