[workspace]
members = [
  "../../packages/*",
  "contracts/note",
  "contracts/proxy",
  "contracts/voice",
  # "scripts",
]
exclude = ["packages/cw-orch-polytone"]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://https://github.com/permissionlessweb/cw-headstash/public-crates"
rust-version = "1.67"
version = "1.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
polytone = { path = "../../packages/polytone", version = "1.1.0" }
polytone-note = { path = "contracts/note", version = "1.1.0" }
# polytone-proxy = { path = "contracts/proxy", version = "1.1.0" }
# polytone-voice = { path = "contracts/voice", version = "1.1.0" }


cosmwasm-schema = "1.5.4"
cosmwasm-std = { version = "1.5.4", features = ["ibc3", "staking"] }
cw-storage-plus = "1.0.1"
cosmos-sdk-proto = { version = "0.23", default-features = false, features = ["cosmwasm", "std"] }

cw-utils = "1.0.1"
cw2 = "1.0.1"

anybuf = "0.5.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = "0.10.6"

# dev-dependencies
cw-multi-test = "0.16.2"
polytone-tester = { path = "tests/polytone-tester" }
anyhow = { version = "1.0.51" }
cw-orch = { version = "0.22.2" }