[workspace]
members = [
  # "../../packages/*",
  "contracts/note",
  "contracts/proxy",
  "contracts/voice",
  # "scripts",
]
# exclude = ["packages/cw-orch-polytone"]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://https://github.com/permissionlessweb/cw-headstash/public-crates/contracts/polytone"
rust-version = "1.67"
version = "1.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
polytone = { path = "../../packages/polytone" }
headstash-public = { path = "../../packages/headstash-public" }
polytone-note = { path = "contracts/note" }
polytone-proxy = { path = "contracts/proxy" }
polytone-voice = { path = "contracts/voice"}


cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = [ "staking"] }
cw-storage-plus = "2.0.0"
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["cosmwasm", "std"] }

cw-utils = "2.0.0"
cw2   = "2.0.0"

anybuf = "0.5.0"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.12" }
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = "0.10.8"

# dev-dependencies
cw-multi-test = "2.0.0"
# polytone-tester = { path = "tests/polytone-tester" }
anyhow = { version = "1.0.51" }
cw-orch = { version = "0.28.0" }