[package]
name         = "polytone-note"
authors      = ["ekez <ekez@withoutdoing.com>"]
description  = "Sends messages to be executed on other chains over IBC."
edition = "2021"
# repository   = { workspace = true }
# license      = { workspace = true }
# version      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# disables #[entry_point] (i.e. instantiate/execute/query) export
library = []
interface = ["dep:cw-orch"]

[dependencies]
cosmwasm-schema  = { workspace = true }
anybuf           = { workspace = true }
cosmwasm-std     = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
cw2              = { workspace = true }
thiserror        = { workspace = true }
polytone         = { workspace = true }
cw-orch          = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow        = { workspace = true }