[package]
name         = "polytone-voice"
authors      = ["ekez <ekez@withoutdoing.com>"]
description  = "The Polytone Voice contract, recieving notes over IBC and vocalizing them on the host chain via account proxy contracts."
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
repository   = { workspace = true }
version      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# disables #[entry_point] (i.e. instantiate/execute/query) export
library = []
# interface = ["dep:cw-orch"]

# This is here inspite of the warnings to make sure it is not missed
# if the contract is taken out of the workspace
[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true    # very important, do not turn these off.
panic            = 'abort'
rpath            = false

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true  }  
# cw-orch         = { workspace = true, optional = true }
# cw-storage-plus = { workspace = true }
# cw2             = { workspace = true }
polytone        = { workspace = true }
polytone-proxy  = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }
chrono = "0.4.40"
secret-toolkit = { git = "https://github.com/SolarRepublic/secret-toolkit.git", default-features = false, features = ["permit", "storage", "viewing-key", "notification"] }

[dev-dependencies]
shade-protocol = { version = "0.1.0",package = "shade-protocol", git = "https://github.com/permissionlessweb/shade", features = ["multi-test", "admin"] }
shade-multi-test = { git = "https://github.com/permissionlessweb/shade"  }
# cw-multi-test = { workspace = true }
anyhow        = { workspace = true }
